# stochastic_games

./: .gitignore  CMakeLists.txt  README.md
games/: LIGame.cpp  LIGame.hpp  Sources.cmake  ZSGame.cpp  ZSGame.hpp
tests/: test_glpk.cpp  test_glpk2.cpp  test_li_discretize.cpp  test_li_discretize2.cpp  test_li_game.cpp  test_zs_game.cpp
